styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*
*
*
CSS RESET
*
*
*/


/* 
*
*
Wrapper for the entire website, 
the element wraps around the whole body element
*
*
*/
.wrapper {
    /* width: 800px; */
    width: 85%;
    margin: 0 auto;
    background-color: red;
     /* text-align: center;  */
   }


/*
*
*
Navigation section
*
*
*/


/*
*
flex-nav is a div for the entire navigation bar, the divs "about-flex" and "gmail-flex" nest inside it 
*
*/

  .flex-nav { 
      display: flex;
      justify-content: space-between;
      padding: 0 5px 0 5px;
  }


  /*
  *
   "about-flex" is a div that nests the links to the "About" and "Store" on the left side of the navigation bar, used flex to fix the spacing issue
   *
   */

  .about-flex{ 
        display:flex;
        justify-content: space-between;
        width: 15%;
  }

  /* 
  *
  gmail-flex is a div that nests the links to the gmail, images, placeholder, and sign in links. This div sits on the right side of the navigation bar. Used flex to fix the spacing issue within the div
  *
  */

  .gmail-flex{  
      display: flex;
      justify-content: space-between;
      width: 40%;
  }

  /*
  *
  *
  MAIN SECTION
  *
  *
  */

  .main-flex{
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
  }

  .searchbtns-flex {

  }

